# dds-sweeper

./: .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SWEEP_DETAILS.md  dds-sweeper.c  docker-compose.yaml
.github/: build.yaml
.github/workflows/: build.yaml
dds-sweeper/: CMakeLists.txt  ad9959.c  ad9959.h  dds-sweeper.c  trigger_timer.pio
dds-sweeper-board/: #auto_saved_files#  dds-sweeper-board-Edge_Cuts.gbr  dds-sweeper-board-F_Cu.gbr  dds-sweeper-board.kicad_pcb  dds-sweeper-board.kicad_prl  dds-sweeper-board.kicad_pro  dds-sweeper-board.kicad_sch  dds-sweeper-board.kicad_sch-bak  fp-info-cache  fp-lib-table
dds-sweeper-board/Custom_Conn.pretty/: PinSocket_2x16_P2.54mm_Vertical_DDS_Sweeper.kicad_mod
dds-sweeper-board/KiCad-RP-Pico/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD.kicad_mod  RPi_Pico_SMD_TH.kicad_mod
dds-sweeper-board/gerbers/: dds-sweeper-board-B_Cu.gbr  dds-sweeper-board-Edge_Cuts.gbr  dds-sweeper-board-F_Cu.gbr  dds-sweeper-board-NPTH.drl  dds-sweeper-board-PTH.drl  dds-sweeper-board-job.gbrjob  dds-sweeper-board.drl
ddssweeper/: CMakeLists.txt  ad9959.c  ad9959.h  dds-sweeper.c  trigger.pio  trigger_timer.pio
docker/: Dockerfile
testing/: BinaryRoutines.py  KeysightScope.py  RSI-paper.ipynb  binary-tests.ipynb  continued-fractions.ipynb  instruction-analysis.ipynb  instruction-tests.ipynb  tests.ipynb
